WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184069
Enhance ARM64 probe to support pointer profiling.
https://bugs.webkit.org/show_bug.cgi?id=184069
Summary
Enhance ARM64 probe to support pointer profiling.
Mark Lam
Reported
2018-03-27 19:36:46 PDT
Patch coming.
Attachments
proposed patch.
(6.88 KB, patch)
2018-03-27 19:42 PDT
,
Mark Lam
jfbastien
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-03-27 19:38:51 PDT
<
rdar://problem/38939879
>
Mark Lam
Comment 2
2018-03-27 19:42:53 PDT
Created
attachment 336639
[details]
proposed patch.
JF Bastien
Comment 3
2018-03-27 21:37:28 PDT
Comment on
attachment 336639
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=336639&action=review
r=me
> Source/JavaScriptCore/assembler/MacroAssemblerX86Common.h:2146 > + }
Assert that the registers aren't the same?
Mark Lam
Comment 4
2018-03-28 13:04:10 PDT
(In reply to JF Bastien from
comment #3
)
> > Source/JavaScriptCore/assembler/MacroAssemblerX86Common.h:2146 > > + } > > Assert that the registers aren't the same?
We talked offline, and concluded that this assertion is not always true. The client is allowed to push the same register twice if desired. So, we'll not add the assert.
Mark Lam
Comment 5
2018-03-28 13:06:21 PDT
Thanks for the review. Landed in
r230040
: <
http://trac.webkit.org/r230040
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug