Enhance ARM64 probe to support pointer profiling. https://bugs.webkit.org/show_bug.cgi?id=184069 <rdar://problem/38939879>

Reviewed by JF Bastien.

* assembler/MacroAssemblerARM64.cpp:
(JSC::MacroAssembler::probe):
* assembler/MacroAssemblerX86Common.h:
(JSC::MacroAssemblerX86Common::popPair):
(JSC::MacroAssemblerX86Common::pushPair):
* assembler/testmasm.cpp:
(JSC::testProbeReadsArgumentRegisters):
(JSC::testProbeWritesArgumentRegisters):
* runtime/PtrTag.h:
(JSC::tagForPtr):



Canonical link: https://commits.webkit.org/199671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230040 268f45cc-cd09-0410-ab3c-d52691b4dbfc